# any
add_subdirectory(any)

# array
add_subdirectory(array)

# bitset
add_subdirectory(bitset)

# deque
add_subdirectory(deque)

# forward_list
add_subdirectory(forward_list)

# list
add_subdirectory(list)

# map
add_subdirectory(map)

# multimap
add_subdirectory(multimap)

# multiset
add_subdirectory(multiset)

# optional
add_subdirectory(optional)

# priority_queue
add_subdirectory(priority_queue)

# queue
add_subdirectory(queue)

# Set
add_subdirectory(Set)

# Vector
add_subdirectory(Vector)
