# any
add_subdirectory(any)

# array
add_subdirectory(array)

# bitset
add_subdirectory(bitset)

# deque
add_subdirectory(deque)

# forward_list
add_subdirectory(forward_list)

# list
add_subdirectory(list)

# map
add_subdirectory(map)

# multimap
add_subdirectory(multimap)

# multiset
add_subdirectory(multiset)

# optional
add_subdirectory(optional)

# priority_queue
add_subdirectory(priority_queue)

# queue
add_subdirectory(queue)

# set
add_subdirectory(set)

# span
add_subdirectory(span)

# stack
add_subdirectory(stack)

# string
add_subdirectory(string)

# unordered_map
add_subdirectory(unordered_map)

# unordered_multimap
add_subdirectory(unordered_multimap)

# unordered_multiset
add_subdirectory(unordered_multiset)

# valarray
add_subdirectory(valarray)

# variant
add_subdirectory(variant)

# vector
add_subdirectory(vector)
